Fixes
Player Deep Copy
Equals and Hashcode (player, stone, state)
Fixed Delay in play()
getMovablePlayers() fix condition of winningTile
switchPlayer() fixed equal statement to only check Color